# fastadmin

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: main.py  models.py
examples/front/: package.json
examples/front/src/: App.js  authProvider.js  login.js  user.js
fastadmin/: __init__.py  depends.py  routes.py  schemas.py  types.py
